feat : search page 기본 로직 구현